--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "auth:generate": "pnpm -F @acme/auth generate",
     "db:push": "turbo -F @acme/db push",
     "db:studio": "turbo -F @acme/db studio",
+    "db:generate": "pnpm -F @acme/db generate",
+    "db:migrate": "pnpm -F @acme/db migrate",
     "dev": "turbo watch dev --continue",
     "dev:next": "turbo watch dev -F @acme/nextjs...",
     "format": "turbo run format --continue -- --cache --cache-location .cache/.prettiercache",
