--- a/packages/validators/package.json
+++ b/packages/validators/package.json
@@ -5,10 +5,12 @@
   "type": "module",
   "exports": {
     ".": {
-      "types": "./dist/index.d.ts",
-      "default": "./src/index.ts"
+        "default": "./src/index.ts"
+    },
+    "./utils": {
+        "default": "./src/utils.ts"
     }
-  },
+},
   "license": "MIT",
   "scripts": {
     "build": "tsc",
