--- a/.env.example
+++ b/.env.example
@@ -10,7 +10,9 @@ POSTGRES_URL="postgres://postgres.[USERNAME]:[PASSWORD]@aws-0-eu-central-1.poole
 
 # You can generate the secret via 'openssl rand -base64 32' on Unix
 # @see https://www.better-auth.com/docs/installation
-AUTH_SECRET='supersecret'
+BETTER_AUTH_SECRET='supersecret'
+BETTER_AUTH_URL="http://localhost:3000"
+NEXT_PUBLIC_BETTER_AUTH_URL="http://localhost:3000"
 
 # Preconfigured Discord OAuth provider, works out-of-the-box
 # @see https://www.better-auth.com/docs/authentication/discord
