--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -45,6 +45,7 @@
   },
   "devDependencies": {
     "@acme/api": "workspace:*",
+    "@acme/auth": "workspace:*",
     "@acme/eslint-config": "workspace:*",
     "@acme/prettier-config": "workspace:*",
     "@acme/tailwind-config": "workspace:*",
