--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -5,8 +5,6 @@
   "type": "module",
   "exports": {
     ".": "./src/index.ts",
-    "./middleware": "./src/middleware.ts",
-    "./client": "./src/client.ts",
     "./env": "./env.ts"
   },
   "license": "MIT",
@@ -19,6 +17,7 @@
   },
   "dependencies": {
     "@acme/db": "workspace:*",
+    "@acme/validators": "workspace:*",
     "@better-auth/expo": "1.2.12",
     "@t3-oss/env-nextjs": "^0.13.6",
     "better-auth": "1.2.12",
