--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -26,11 +26,13 @@
     "lint": "eslint",
     "push": "pnpm with-env drizzle-kit push",
     "studio": "pnpm with-env drizzle-kit studio",
+    "generate": "pnpm with-env drizzle-kit generate",
+    "migrate": "pnpm with-env drizzle-kit migrate",
     "typecheck": "tsc --noEmit --emitDeclarationOnly false",
     "with-env": "dotenv -e ../../.env --"
   },
   "dependencies": {
-    "@vercel/postgres": "^0.10.0",
+    "@neondatabase/serverless": "^1.0.1",
     "drizzle-orm": "^0.44.1",
     "drizzle-zod": "^0.8.2",
     "zod": "catalog:"
