--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -11,7 +11,9 @@
     "./input": "./src/input.tsx",
     "./label": "./src/label.tsx",
     "./theme": "./src/theme.tsx",
-    "./toast": "./src/toast.tsx"
+    "./toast": "./src/toast.tsx",
+    "./utils": "./src/utils.ts",
+    "./card": "./src/card.tsx"
   },
   "license": "MIT",
   "scripts": {
@@ -23,7 +25,10 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "next-themes": "^0.4.6",
     "radix-ui": "^1.4.2",
