--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@acme/auth",
+  "name": "@repo/auth",
   "version": "0.1.0",
   "private": true,
   "type": "module",
@@ -16,9 +16,9 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@acme/db": "workspace:*",
-    "@acme/validators": "workspace:*",
     "@better-auth/expo": "1.2.12",
+    "@repo/db": "workspace:*",
+    "@repo/validators": "workspace:*",
     "@t3-oss/env-nextjs": "^0.13.6",
     "better-auth": "1.2.12",
     "next": "^15.3.3",
@@ -27,14 +27,14 @@
     "zod": "catalog:"
   },
   "devDependencies": {
-    "@acme/eslint-config": "workspace:*",
-    "@acme/prettier-config": "workspace:*",
-    "@acme/tsconfig": "workspace:*",
     "@better-auth/cli": "1.2.12",
+    "@repo/eslint-config": "workspace:*",
+    "@repo/prettier-config": "workspace:*",
+    "@repo/tsconfig": "workspace:*",
     "@types/react": "catalog:react19",
     "eslint": "catalog:",
     "prettier": "catalog:",
     "typescript": "catalog:"
   },
-  "prettier": "@acme/prettier-config"
+  "prettier": "@repo/prettier-config"
 }
