--- a/packages/validators/package.json
+++ b/packages/validators/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@acme/validators",
+  "name": "@repo/validators",
   "private": true,
   "version": "0.1.0",
   "type": "module",
@@ -24,12 +24,12 @@
     "zod": "catalog:"
   },
   "devDependencies": {
-    "@acme/eslint-config": "workspace:*",
-    "@acme/prettier-config": "workspace:*",
-    "@acme/tsconfig": "workspace:*",
+    "@repo/eslint-config": "workspace:*",
+    "@repo/prettier-config": "workspace:*",
+    "@repo/tsconfig": "workspace:*",
     "eslint": "catalog:",
     "prettier": "catalog:",
     "typescript": "catalog:"
   },
-  "prettier": "@acme/prettier-config"
+  "prettier": "@repo/prettier-config"
 }
